demos/c_cpp_includes/dtwainx.h

LONG           DLLENTRY_DEF      DTWAIN_GetRegisteredMsg(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetVersion(LPLONG lpMajor, LPLONG lpMinor,LPLONG lpVersionType);
LONG           DLLENTRY_DEF      DTWAIN_GetStaticLibVersion(VOID_PROTOTYPE);
/* DTWAIN Error message handling */
LONG           DLLENTRY_DEF      DTWAIN_GetLastError(VOID_PROTOTYPE);
LONG           DLLENTRY_DEF      DTWAIN_GetTwainMode(VOID_PROTOTYPE);
LONG           DLLENTRY_DEF      DTWAIN_GetLanguage(VOID_PROTOTYPE);
/* Handle to TWAIN Message Window */
HWND           DLLENTRY_DEF      DTWAIN_GetTwainHwnd(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetSourceVersionNumber(DTWAIN_SOURCE Source,LPLONG pMajor,LPLONG pMinor);
/* Getting acquired images after successful acquisition */
LONG           DLLENTRY_DEF      DTWAIN_GetNumAcquisitions( DTWAIN_ARRAY aAcq);
LONG           DLLENTRY_DEF      DTWAIN_GetNumAcquiredImages( DTWAIN_ARRAY aAcq, LONG nWhich );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_GetSourceAcquisitions(DTWAIN_SOURCE Source);
LONG           DLLENTRY_DEF      DTWAIN_GetMaxAcquisitions( DTWAIN_SOURCE Source);
LONG           DLLENTRY_DEF      DTWAIN_GetMaxPagesToAcquire(DTWAIN_SOURCE Source);
/* Setting the Source's unit of measure */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetSourceUnit(DTWAIN_SOURCE Source, LPLONG lpUnit);
/* Image information for TWAIN State 6 */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetImageInfo(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT lpXResolution,LPDTWAIN_FLOAT lpYResolution,LPLONG lpWidth,LPLONG lpLength,LPLONG lpNumSamples,LPDTWAIN_ARRAY lpBitsPerSample,LPLONG lpBitsPerPixel,LPLONG lpPlanar,LPLONG lpPixelType,LPLONG lpCompression);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetResolution( DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Resolution);
/* Used if the TWAIN DSM is to be called directly by the application */
DTWAIN_IDENTITY  DLLENTRY_DEF DTWAIN_GetTwainAppID(VOID_PROTOTYPE);
DTWAIN_IDENTITY DLLENTRY_DEF DTWAIN_GetSourceID(DTWAIN_SOURCE Source);
LONG        DLLENTRY_DEF DTWAIN_GetFileCompressionType(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinter(DTWAIN_SOURCE Source, LPLONG lpPrinter, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStartNumber(DTWAIN_SOURCE Source,  LPLONG nStart);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStringMode(DTWAIN_SOURCE Source, LPLONG PrinterMode, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStrings(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY ArrayString );
LONG           DLLENTRY_DEF       DTWAIN_GetFeederFuncs(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOrientation(DTWAIN_SOURCE Source, LPLONG lpOrient, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPaperSize(DTWAIN_SOURCE Source, LPLONG lpPaperSize, DTWAIN_BOOL bCurrent);
/* Pixel Types and Bit depths */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPixelType(DTWAIN_SOURCE Source, LPLONG PixelType,LPLONG BitDepth, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetJpegValues(DTWAIN_SOURCE Source, LPLONG pQuality, LPLONG Progressive);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPDFTextElementFloat(DTWAIN_PDFTEXTELEMENT TextElement, LPDTWAIN_FLOAT val1, LPDTWAIN_FLOAT val2, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPDFTextElementLong(DTWAIN_PDFTEXTELEMENT TextElement, LPLONG val1, LPLONG val2, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetJobControl(DTWAIN_SOURCE Source, LPLONG pJobControl, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetLightPath(DTWAIN_SOURCE Source, LPLONG lpLightPath);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetLightSources(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY LightSources);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetLightSource(DTWAIN_SOURCE Source, LPLONG LightSource);
LONG        DLLENTRY_DEF DTWAIN_GetMaxRetryAttempts(DTWAIN_SOURCE Source);
/* This function actualy initiates the querying of the ext image information.  This function
   will query the TWAIN Source.  If your TWAIN Source has bugs, this will be where any problem
   will exist */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfo(DTWAIN_SOURCE Source);
/* This returns the data that the Source returned when the item is queried.  Application
   must make sure that the LPVOID passed in fits the data that is returned from the Source.
   Use DTWAIN_GetExtImageInfoItem to determine the type of data.   */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfoData(DTWAIN_SOURCE Source, LONG nWhich, LPDTWAIN_ARRAY Data);
/* This returns the information pertaining to a certain item in the list.  The application
will call this for each information retrieved from the Source.  This function does not
return the actual data, only the information as to the number of items, data type, etc.
that the Source reports for the data item.  Use DTWAIN_GetExtImageInfoData to get the
data */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfoItem(DTWAIN_SOURCE Source, LONG nWhich, LPLONG InfoID, LPLONG NumItems, LPLONG Type);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetExtImageInfoItemEx(DTWAIN_SOURCE Source, LONG nWhich, LPLONG InfoID, LPLONG NumItems, LPLONG Type, LPLONG ReturnCode);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetManualDuplexCount( DTWAIN_SOURCE Source, LPLONG pSide1, LPLONG pSide2);
/* CAP_FEEDERALIGNMENT */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetFeederAlignment( DTWAIN_SOURCE Source, LPLONG lpAlignment );
/* CAP_FEEDERORDER */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetFeederOrder( DTWAIN_SOURCE Source, LPLONG lpOrder );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetMaxBuffers(DTWAIN_SOURCE Source, LPLONG pMaxBuf);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOverscan(DTWAIN_SOURCE Source, LPLONG lpOverscan, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetHighlight( DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Highlight);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetNoiseFilter(DTWAIN_SOURCE Source, LPLONG lpNoiseFilter);
/* ICAP_PIXELFLAVOR */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPixelFlavor(DTWAIN_SOURCE Source, LPLONG lpPixelFlavor);
/* ICAP_ROTATION */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetRotation(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Rotation);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetShadow( DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Shadow);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetThreshold( DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Threshold);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPatchMaxRetries(DTWAIN_SOURCE Source, LPLONG pMaxRetries, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPatchMaxPriorities(DTWAIN_SOURCE Source, LPLONG pMaxPriorities, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPatchSearchMode(DTWAIN_SOURCE Source, LPLONG pSearchMode, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPatchTimeOut(DTWAIN_SOURCE Source, LPLONG pTimeOut, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPatchPriorities(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY SearchPriorities);
LONG        DLLENTRY_DEF DTWAIN_GetSavedFilesCount(DTWAIN_SOURCE Source);
LONG DLLENTRY_DEF DTWAIN_GetTwainTimeout(VOID_PROTOTYPE);
LONG        DLLENTRY_DEF DTWAIN_GetErrorBufferThreshold(VOID_PROTOTYPE);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRCapValues(DTWAIN_OCRENGINE Engine,LONG OCRCapValue,LONG GetType,LPDTWAIN_ARRAY CapValues);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRMajorMinorVersion(DTWAIN_OCRENGINE Engine, LPLONG lpMajor, LPLONG lpMinor);
DTWAIN_OCRTEXTINFOHANDLE DLLENTRY_DEF DTWAIN_GetOCRTextInfoHandle(DTWAIN_OCRENGINE Engine, LONG nPageNo);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoLongEx(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo,LONG nWhichItem,LPLONG pInfo,LONG bufSize);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoFloatEx(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo,LONG nWhichItem,LPDTWAIN_FLOAT pInfo,LONG bufSize);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoLong(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo, LONG nCharPos, LONG nWhichItem, LPLONG pInfo);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoFloat(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo, LONG nCharPos, LONG nWhichItem, LPDTWAIN_FLOAT pInfo);
LONG        DLLENTRY_DEF DTWAIN_GetOCRLastError(DTWAIN_OCRENGINE Engine);
LONG DLLENTRY_DEF DTWAIN_GetTwainAvailability(VOID_PROTOTYPE);
DTWAIN_LOGGER_PROC DLLENTRY_DEF DTWAIN_GetLoggerCallback(VOID_PROTOTYPE);
DTWAIN_LOGGER_PROCA DLLENTRY_DEF DTWAIN_GetLoggerCallbackA(VOID_PROTOTYPE);
DTWAIN_LOGGER_PROCW DLLENTRY_DEF DTWAIN_GetLoggerCallbackW(VOID_PROTOTYPE);
DTWAIN_ERROR_PROC DLLENTRY_DEF DTWAIN_GetErrorCallback(VOID_PROTOTYPE);
DTWAIN_ERROR_PROC64 DLLENTRY_DEF DTWAIN_GetErrorCallback64(VOID_PROTOTYPE);
/* Get the application and TWAIN Source TW_IDENTITY */
TWAIN_IDENTITY  DLLENTRY_DEF DTWAIN_GetTwainAppIDEx(TW_IDENTITY* pIdentity);
TWAIN_IDENTITY  DLLENTRY_DEF DTWAIN_GetSourceIDEx(DTWAIN_SOURCE Source, TW_IDENTITY* pIdentity);