demos/Python/dtwain.py

     theDLL.DTWAIN_GetErrorBufferThreshold.restype = ct.c_long
     theDLL.DTWAIN_GetErrorCallback.restype = theDLL.SETERRORPROC_TYPE
     theDLL.DTWAIN_GetErrorCallback64.restype = theDLL.SETERRORPROC64_TYPE
     theDLL.DTWAIN_GetErrorString.restype = ct.c_long
     theDLL.DTWAIN_GetErrorStringA.restype = ct.c_long
     theDLL.DTWAIN_GetErrorStringW.restype = ct.c_long
     theDLL.DTWAIN_GetExtCapFromName.restype = ct.c_long
     theDLL.DTWAIN_GetExtCapFromNameA.restype = ct.c_long
     theDLL.DTWAIN_GetExtCapFromNameW.restype = ct.c_long
     theDLL.DTWAIN_GetExtImageInfo.restype = ct.c_long
     theDLL.DTWAIN_GetExtImageInfoData.restype = ct.c_long
     theDLL.DTWAIN_GetExtImageInfoItem.restype = ct.c_long
     theDLL.DTWAIN_GetExtImageInfoItemEx.restype = ct.c_long
     theDLL.DTWAIN_GetExtNameFromCap.restype = ct.c_long
     theDLL.DTWAIN_GetExtNameFromCapA.restype = ct.c_long
     theDLL.DTWAIN_GetExtNameFromCapW.restype = ct.c_long
     theDLL.DTWAIN_GetFeederAlignment.restype = ct.c_long
     theDLL.DTWAIN_GetFeederFuncs.restype = ct.c_long
     theDLL.DTWAIN_GetFeederOrder.restype = ct.c_long
     theDLL.DTWAIN_GetFileCompressionType.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeExtensions.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeExtensionsA.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeExtensionsW.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeName.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeNameA.restype = ct.c_long
     theDLL.DTWAIN_GetFileTypeNameW.restype = ct.c_long
     theDLL.DTWAIN_GetHalftone.restype = ct.c_long
     theDLL.DTWAIN_GetHalftoneA.restype = ct.c_long
     theDLL.DTWAIN_GetHalftoneW.restype = ct.c_long
     theDLL.DTWAIN_GetHighlight.restype = ct.c_long
     theDLL.DTWAIN_GetHighlightString.restype = ct.c_long
     theDLL.DTWAIN_GetHighlightStringA.restype = ct.c_long
     theDLL.DTWAIN_GetHighlightStringW.restype = ct.c_long
     theDLL.DTWAIN_GetImageInfo.restype = ct.c_long
     theDLL.DTWAIN_GetImageInfoString.restype = ct.c_long
     theDLL.DTWAIN_GetImageInfoStringA.restype = ct.c_long
     theDLL.DTWAIN_GetImageInfoStringW.restype = ct.c_long
     theDLL.DTWAIN_GetJobControl.restype = ct.c_long
     theDLL.DTWAIN_GetJpegValues.restype = ct.c_long
     theDLL.DTWAIN_GetLanguage.restype = ct.c_long
     theDLL.DTWAIN_GetLastError.restype = ct.c_long
     theDLL.DTWAIN_GetLibraryPath.restype = ct.c_long
     theDLL.DTWAIN_GetLibraryPathA.restype = ct.c_long
     theDLL.DTWAIN_GetLibraryPathW.restype = ct.c_long
     theDLL.DTWAIN_GetLightPath.restype = ct.c_long
     theDLL.DTWAIN_GetLightSource.restype = ct.c_long
     theDLL.DTWAIN_GetLightSources.restype = ct.c_long
     theDLL.DTWAIN_GetLoggerCallback.restype = theDLL.SETLOGGERPROC_TYPE
     theDLL.DTWAIN_GetLoggerCallbackA.restype = theDLL.SETLOGGERPROCA_TYPE
     theDLL.DTWAIN_GetLoggerCallbackW.restype = theDLL.SETLOGGERPROCW_TYPE
     theDLL.DTWAIN_GetManualDuplexCount.restype = ct.c_long
     theDLL.DTWAIN_GetMaxAcquisitions.restype = ct.c_long
     theDLL.DTWAIN_GetMaxBuffers.restype = ct.c_long
     theDLL.DTWAIN_GetMaxPagesToAcquire.restype = ct.c_long
     theDLL.DTWAIN_GetMaxRetryAttempts.restype = ct.c_long
     theDLL.DTWAIN_GetNameFromCap.restype = ct.c_long
     theDLL.DTWAIN_GetNameFromCapA.restype = ct.c_long
     theDLL.DTWAIN_GetNameFromCapW.restype = ct.c_long
     theDLL.DTWAIN_GetNoiseFilter.restype = ct.c_long
     theDLL.DTWAIN_GetNumAcquiredImages.restype = ct.c_long
     theDLL.DTWAIN_GetNumAcquisitions.restype = ct.c_long
     theDLL.DTWAIN_GetOCRCapValues.restype = ct.c_long
     theDLL.DTWAIN_GetOCRErrorString.restype = ct.c_long
     theDLL.DTWAIN_GetOCRErrorStringA.restype = ct.c_long
     theDLL.DTWAIN_GetOCRErrorStringW.restype = ct.c_long
     theDLL.DTWAIN_GetOCRLastError.restype = ct.c_long
     theDLL.DTWAIN_GetOCRMajorMinorVersion.restype = ct.c_long
     theDLL.DTWAIN_GetOCRManufacturer.restype = ct.c_long
     theDLL.DTWAIN_GetOCRManufacturerA.restype = ct.c_long
     theDLL.DTWAIN_GetOCRManufacturerW.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductFamily.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductFamilyA.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductFamilyW.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductName.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductNameA.restype = ct.c_long
     theDLL.DTWAIN_GetOCRProductNameW.restype = ct.c_long
     theDLL.DTWAIN_GetOCRText.restype = ct.c_void_p
     theDLL.DTWAIN_GetOCRTextA.restype = ct.c_void_p
     theDLL.DTWAIN_GetOCRTextInfoFloat.restype = ct.c_long
     theDLL.DTWAIN_GetOCRTextInfoFloatEx.restype = ct.c_long
     theDLL.DTWAIN_GetOCRTextInfoHandle.restype = ct.c_void_p
     theDLL.DTWAIN_GetOCRTextInfoLong.restype = ct.c_long
     theDLL.DTWAIN_GetOCRTextInfoLongEx.restype = ct.c_long
     theDLL.DTWAIN_GetOCRTextW.restype = ct.c_void_p
     theDLL.DTWAIN_GetOCRVersionInfo.restype = ct.c_long
     theDLL.DTWAIN_GetOCRVersionInfoA.restype = ct.c_long
     theDLL.DTWAIN_GetOCRVersionInfoW.restype = ct.c_long
     theDLL.DTWAIN_GetOrientation.restype = ct.c_long
     theDLL.DTWAIN_GetOverscan.restype = ct.c_long
     theDLL.DTWAIN_GetPDFTextElementFloat.restype = ct.c_long
     theDLL.DTWAIN_GetPDFTextElementLong.restype = ct.c_long
     theDLL.DTWAIN_GetPDFTextElementString.restype = ct.c_long
     theDLL.DTWAIN_GetPDFTextElementStringA.restype = ct.c_long
     theDLL.DTWAIN_GetPDFTextElementStringW.restype = ct.c_long
     theDLL.DTWAIN_GetPDFType1FontName.restype = ct.c_long
     theDLL.DTWAIN_GetPDFType1FontNameA.restype = ct.c_long
     theDLL.DTWAIN_GetPDFType1FontNameW.restype = ct.c_long
     theDLL.DTWAIN_GetPaperSize.restype = ct.c_long
     theDLL.DTWAIN_GetPaperSizeName.restype = ct.c_long
     theDLL.DTWAIN_GetPaperSizeName.restype = ct.c_long
     theDLL.DTWAIN_GetPaperSizeNameA.restype = ct.c_long
     theDLL.DTWAIN_GetPaperSizeNameW.restype = ct.c_long
     theDLL.DTWAIN_GetPatchMaxPriorities.restype = ct.c_long
     theDLL.DTWAIN_GetPatchMaxRetries.restype = ct.c_long
     theDLL.DTWAIN_GetPatchPriorities.restype = ct.c_long
     theDLL.DTWAIN_GetPatchSearchMode.restype = ct.c_long
     theDLL.DTWAIN_GetPatchTimeOut.restype = ct.c_long
     theDLL.DTWAIN_GetPixelFlavor.restype = ct.c_long
     theDLL.DTWAIN_GetPixelType.restype = ct.c_long
     theDLL.DTWAIN_GetPrinter.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterStartNumber.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterStringMode.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterStrings.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterSuffixString.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterSuffixStringA.restype = ct.c_long
     theDLL.DTWAIN_GetPrinterSuffixStringW.restype = ct.c_long
     theDLL.DTWAIN_GetRegisteredMsg.restype = ct.c_long
     theDLL.DTWAIN_GetResolution.restype = ct.c_long
     theDLL.DTWAIN_GetResolutionString.restype = ct.c_long
     theDLL.DTWAIN_GetResolutionStringA.restype = ct.c_long
     theDLL.DTWAIN_GetResolutionStringW.restype = ct.c_long
     theDLL.DTWAIN_GetResourceString.restype = ct.c_long
     theDLL.DTWAIN_GetResourceStringA.restype = ct.c_long
     theDLL.DTWAIN_GetResourceStringW.restype = ct.c_long
     theDLL.DTWAIN_GetRotation.restype = ct.c_long
     theDLL.DTWAIN_GetRotationString.restype = ct.c_long
     theDLL.DTWAIN_GetRotationStringA.restype = ct.c_long
     theDLL.DTWAIN_GetRotationStringW.restype = ct.c_long
     theDLL.DTWAIN_GetSaveFileName.restype = ct.c_long
     theDLL.DTWAIN_GetSaveFileNameA.restype = ct.c_long
     theDLL.DTWAIN_GetSaveFileNameW.restype = ct.c_long
     theDLL.DTWAIN_GetSavedFilesCount.restype = ct.c_long
     theDLL.DTWAIN_GetSessionDetails.restype = ct.c_long
     theDLL.DTWAIN_GetSessionDetailsA.restype = ct.c_long
     theDLL.DTWAIN_GetSessionDetailsW.restype = ct.c_long
     theDLL.DTWAIN_GetShadow.restype = ct.c_long
     theDLL.DTWAIN_GetShadowString.restype = ct.c_long
     theDLL.DTWAIN_GetShadowStringA.restype = ct.c_long
     theDLL.DTWAIN_GetShadowStringW.restype = ct.c_long
     theDLL.DTWAIN_GetShortVersionString.restype = ct.c_long
     theDLL.DTWAIN_GetShortVersionStringA.restype = ct.c_long
     theDLL.DTWAIN_GetShortVersionStringW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceAcquisitions.restype = ct.c_void_p
     theDLL.DTWAIN_GetSourceDetails.restype = ct.c_long
     theDLL.DTWAIN_GetSourceDetailsA.restype = ct.c_long
     theDLL.DTWAIN_GetSourceDetailsW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceID.restype = ct.c_void_p
     theDLL.DTWAIN_GetSourceIDEx.restype = ct.c_void_p
     theDLL.DTWAIN_GetSourceManufacturer.restype = ct.c_long
     theDLL.DTWAIN_GetSourceManufacturerA.restype = ct.c_long
     theDLL.DTWAIN_GetSourceManufacturerW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductFamily.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductFamilyA.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductFamilyW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductName.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductNameA.restype = ct.c_long
     theDLL.DTWAIN_GetSourceProductNameW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceUnit.restype = ct.c_long
     theDLL.DTWAIN_GetSourceVersionInfo.restype = ct.c_long
     theDLL.DTWAIN_GetSourceVersionInfoA.restype = ct.c_long
     theDLL.DTWAIN_GetSourceVersionInfoW.restype = ct.c_long
     theDLL.DTWAIN_GetSourceVersionNumber.restype = ct.c_long
     theDLL.DTWAIN_GetStaticLibVersion.restype = ct.c_long
     theDLL.DTWAIN_GetTempFileDirectory.restype = ct.c_long
     theDLL.DTWAIN_GetTempFileDirectoryA.restype = ct.c_long
     theDLL.DTWAIN_GetTempFileDirectoryW.restype = ct.c_long
     theDLL.DTWAIN_GetThreshold.restype = ct.c_long
     theDLL.DTWAIN_GetThresholdString.restype = ct.c_long
     theDLL.DTWAIN_GetThresholdStringA.restype = ct.c_long
     theDLL.DTWAIN_GetThresholdStringW.restype = ct.c_long
     theDLL.DTWAIN_GetTimeDate.restype = ct.c_long
     theDLL.DTWAIN_GetTimeDateA.restype = ct.c_long
     theDLL.DTWAIN_GetTimeDateW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainAppID.restype = ct.c_void_p
     theDLL.DTWAIN_GetTwainAppIDEx.restype = ct.c_void_p
     theDLL.DTWAIN_GetTwainAvailability.restype = ct.c_long
     theDLL.DTWAIN_GetTwainAvailabilityEx.restype = ct.c_long
     theDLL.DTWAIN_GetTwainAvailabilityExA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainAvailabilityExW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryName.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryNameA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryNameW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryValue.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryValueA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainCountryValueW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainHwnd.restype = ct.c_void_p
     theDLL.DTWAIN_GetTwainIDFromName.restype = ct.c_long
     theDLL.DTWAIN_GetTwainIDFromNameA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainIDFromNameW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageName.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageNameA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageNameW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageValue.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageValueA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainLanguageValueW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainMode.restype = ct.c_long
     theDLL.DTWAIN_GetTwainNameFromConstant.restype = ct.c_long
     theDLL.DTWAIN_GetTwainNameFromConstantA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainNameFromConstantW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainStringName.restype = ct.c_long
     theDLL.DTWAIN_GetTwainStringNameA.restype = ct.c_long
     theDLL.DTWAIN_GetTwainStringNameW.restype = ct.c_long
     theDLL.DTWAIN_GetTwainTimeout.restype = ct.c_long
     theDLL.DTWAIN_GetVersion.restype = ct.c_long
     theDLL.DTWAIN_GetVersionCopyright.restype = ct.c_long
     theDLL.DTWAIN_GetVersionCopyrightA.restype = ct.c_long
